globus-gridftp-server-control (3.7-1+gt6.@distro@) @distro@; urgency=low

  * remove dead code

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 17:06:16 -0400

globus-gridftp-server-control (3.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gridftp-server-control (3.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gridftp-server-control (3.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gridftp-server-control (3.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:45 -0400

globus-gridftp-server-control (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:31 -0400

globus-gridftp-server-control (3.3-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:58 -0400

globus-gridftp-server-control (3.3-1+gt6.@distro@) @distro@; urgency=low

  * Fix leak

 -- Globus Toolkit <support@globus.org>  Tue, 11 Mar 2014 08:43:03 -0400

globus-gridftp-server-control (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:43 -0500

globus-gridftp-server-control (3.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 18:31:08 -0500

globus-gridftp-server-control (3.0-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 17:19:21 -0500
