@@ -1,7 +1,7 @@
 Name:		globus-gridftp-server-control
 %global _name %(tr - _ <<< %{name})
-Version:	3.7
-Release:	2%{?dist}
+Version:	4.0
+Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus GridFTP Server Library
 
@@ -106,6 +106,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/pkgconfig/%{name}.pc
 
 %changelog
+* Mon Nov 23 2015 Globus Toolkit <support@globus.org> - 4.0-1
+- Add correct behavior for data auth error code
+
 * Thu Aug 06 2015 Globus Toolkit <support@globus.org> - 3.7-2
 - Add vendor
 
